--- a/src/main/resources/views/fxml/noiseDevice/noiseDeviceAfter.fxml
+++ b/src/main/resources/views/fxml/noiseDevice/noiseDeviceAfter.fxml
@@ -576,14 +576,14 @@
                                     <HBox style="-fx-padding: 5 0 0 55" spacing="10">
                                         <VBox spacing="10" style="-fx-padding: 10 0 0 0">
                                             <JFXButton prefWidth="65" text="静态文本"/>
-                                            <JFXButton prefWidth="65" text="动态字母"/>
-                                            <JFXButton prefWidth="65" text="时间"/>
-                                            <JFXButton prefWidth="65" text="噪声"/>
+                                            <JFXButton fx:id="subTitleButton" prefWidth="65" text="动态字幕"/>
+                                            <JFXButton fx:id="timeButton" prefWidth="65" text="时间"/>
+                                            <JFXButton fx:id="noiseButton" prefWidth="65" text="噪声"/>
                                         </VBox>
-                                            <JFXListView fx:id="sideList" prefHeight="200.0" prefWidth="130.0">
-                                                <Label fx:id="button">文本</Label>
-                                                <Label fx:id="checkbox">字幕</Label>
-                                                <Label fx:id="combobox">时间</Label>
+                                            <JFXListView fx:id="sideList" onMouseClicked="#changePage" prefHeight="200.0" prefWidth="130.0">
+                                                <Label styleClass="noise">噪声</Label>
+                                                <Label styleClass="subTitle">字幕</Label>
+                                                <Label styleClass="time">时间</Label>
                                             </JFXListView>
                                         <ScrollPane style="-fx-background-color: white;-fx-border-color: #949494"
                                                     prefHeight="200.0" prefWidth="300.0" >
