--- a/src/main/resources/views/fxml/user/editPassword.fxml
+++ b/src/main/resources/views/fxml/user/editPassword.fxml
@@ -25,7 +25,7 @@
                         <Label prefHeight="30.0" prefWidth="60.0" text="重复密码:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                         <PasswordField fx:id="againPassword" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label GridPane.columnIndex="2" GridPane.rowIndex="3">*</Label>
-                        <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                        <Text fx:id="actiontarget" style="-fx-fill: red" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
                     </children>
                 </GridPane>
                 <Label style="-fx-padding: 20 0 0 155">提示：*为必填项</Label>
