--- a/src/main/resources/views/fxml/user/findDownUser.fxml
+++ b/src/main/resources/views/fxml/user/findDownUser.fxml
@@ -22,7 +22,7 @@
                 <TextField fx:id="downName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <Label prefHeight="30.0" prefWidth="60.0" text="电话号码:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                 <TextField fx:id="downTelephone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <Text fx:id="actiontarget" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                <Text fx:id="actiontarget" style="-fx-fill: red" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
             </children>
         </GridPane>
                 <Label style="-fx-padding: 20 0 0 85">提示：可以输入一项或者多项查询条件</Label>
