--- a/src/main/resources/views/fxml/measure/undistributeMeasure.fxml
+++ b/src/main/resources/views/fxml/measure/undistributeMeasure.fxml
@@ -3,30 +3,26 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import com.jfoenix.controls.JFXButton?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx"
             prefHeight="500.0" prefWidth="600.0">
     <VBox >
         <HBox prefHeight="450">
         <padding>
-            <Insets bottom="20.0" left="80.0" top="50.0"/>
+            <Insets bottom="20.0" left="120.0" top="50.0"/>
         </padding>
-            <TableView fx:id="">
+            <ScrollPane prefHeight="200" prefWidth="352">
+            <TableView fx:id="undistributeMeasureTreeView">
                 <columns>
-                    <TableColumn prefWidth="35.0">
-                        <cellValueFactory>
-                            <PropertyValueFactory property="check" />
-                        </cellValueFactory>
-                    </TableColumn>
-                    <TableColumn fx:id="" minWidth="133" prefWidth="133" text="测点编号"/>
-                    <TableColumn fx:id="" minWidth="133" text="设备类型"/>
-                    <TableColumn fx:id="" minWidth="133" text="侦听端口"/>
+                    <TableColumn fx:id="measureCheck" prefWidth="50" text="请选择"/>
+                    <TableColumn fx:id="measureCode" minWidth="142" text="测点编号"/>
+                    <TableColumn fx:id="measureName" minWidth="142" text="设备名称"/>
                 </columns>
             </TableView>
+            </ScrollPane>
         </HBox>
         <HBox style="-fx-padding: 0 0 30 270;-fx-font-size: 14">
-            <JFXButton fx:id="" buttonType="RAISED" style="-fx-background-color: green;" styleClass="custom-jfx-button-raised" prefHeight="30"  text="确定"/>
+            <JFXButton fx:id="commitDistributeMeasure" buttonType="RAISED" style="-fx-background-color: green;" styleClass="custom-jfx-button-raised" prefHeight="30"  text="确定"/>
         </HBox>
     </VBox>
 </AnchorPane>
