--- a/src/main/resources/views/fxml/user/editDownUser.fxml
+++ b/src/main/resources/views/fxml/user/editDownUser.fxml
@@ -15,10 +15,12 @@
     <BorderPane>
         <center>
             <VBox maxHeight="700" maxWidth="500">
-                <GridPane style="-fx-padding: 30 0 0 100">
+                <GridPane style="-fx-padding: 30 0 0 80">
                     <children>
-                        <Label prefHeight="30.0" prefWidth="60.0" text="类      型:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="searchComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1" id="jfxComboBox" prefWidth="200" promptText="选择用户等级">
+                        <Label prefHeight="30.0" prefWidth="60.0" text="姓      名:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                        <Label fx:id="downName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label prefHeight="30.0" prefWidth="60.0" text="类      型:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <ComboBox fx:id="downUserType" GridPane.columnIndex="1" GridPane.rowIndex="2" id="jfxComboBox" prefWidth="200" promptText="选择用户等级">
                             <items>
                                 <FXCollections fx:factory="observableArrayList">
                                 </FXCollections>
