--- a/src/main/resources/views/fxml/device/AddDeviceBefore.fxml
+++ b/src/main/resources/views/fxml/device/AddDeviceBefore.fxml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.collections.FXCollections?>
+<?import com.jfoenix.controls.JFXButton?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx"
             prefHeight="400.0" prefWidth="450.0">
-    <VBox layoutX="30" layoutY="30">
-        <HBox spacing="10" style="-fx-padding: 0 0 0 70">
-            <Label prefHeight="30.0" prefWidth="60.0" text="设备类型:" style="-fx-padding: 0 0 5 0"/>
-            <ComboBox fx:id="searchComboBox" id="jfxComboBox" prefWidth="200" promptText="选择设备类型">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                    </FXCollections>
-                </items>
-            </ComboBox>
+    <VBox layoutX="20" layoutY="30">
+        <HBox spacing="10">
+            <Label text="选择设备类型:" style="-fx-padding: 0 0 5 0"/>
         </HBox>
-        <ScrollPane prefHeight="300.0" prefWidth="390.0">
-
-        </ScrollPane>
+        <HBox>
+        <HBox style="-fx-padding: 10 0 0 30">
+            <JFXButton fx:id="AWA6218j" text="AWA6218j"/>
+        </HBox>
+        <HBox style="-fx-padding: 10 0 0 30">
+            <JFXButton fx:id="AWA6218s" text="AWA6218s"/>
+        </HBox>
+        <HBox style="-fx-padding: 10 0 0 30">
+            <JFXButton fx:id="1102" text="AWA6218s"/>
+        </HBox>
+        </HBox>
     </VBox>
-
 </AnchorPane>
