--- a/src/main/resources/views/fxml/measure/AddFixedMeasure.fxml
+++ b/src/main/resources/views/fxml/measure/AddFixedMeasure.fxml
@@ -16,6 +16,9 @@
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.text.Text?>
 <ScrollPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="800.0"
             prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121">
     <AnchorPane prefHeight="800.0" prefWidth="600.0">
@@ -57,17 +60,21 @@
                     <Label GridPane.columnIndex="2" GridPane.rowIndex="8">50字以内</Label>
                 </children>
             </GridPane>
+            <VBox style="-fx-padding: 0 0 0 130">
+                <Text fx:id="actiontarget" style="-fx-fill: red" GridPane.columnIndex="1" GridPane.rowIndex="20"/>
+            </VBox>
             <Label style="-fx-padding: 0 0 0 135">提示：*为必填项</Label>
             <HBox style="-fx-padding: 5 0 0 50">
-                <JFXCheckBox fx:id="AutoConnect" selected="true" text="允许自动连接"/>
+                <JFXCheckBox fx:id="autoConnect" selected="true" text="允许自动连接"/>
             </HBox>
         </VBox>
         <!--照片显示地-->
         <VBox layoutX="370" layoutY="130">
-            <ScrollPane prefHeight="100.0" prefWidth="100.0">
-                <ImageView fx:id="MeasureHead">
+                <ImageView fx:id="MeasureHead" fitHeight="100.0" fitWidth="100.0">
                 </ImageView>
-            </ScrollPane>
+            <VBox style="-fx-padding: 5 0 0 15">
+                <JFXButton fx:id="fileChoose" GridPane.columnIndex="2" GridPane.rowIndex="10" style="-fx-font-size: 13;-fx-background-color: pink" text="选择照片" />
+            </VBox>
         </VBox>
         <!--设备显示框-->
         <VBox layoutY="350" layoutX="35" maxHeight="400" maxWidth="650" spacing="10">
@@ -93,6 +100,9 @@
                                                        text="删除设备"
                                                        styleClass="custom-jfx-button-raised"
                                                        style="-fx-text-fill: #D34336"/>
+                                            <JFXButton fx:id="buforeManager" prefHeight="30" buttonType="RAISED"
+                                                       text="前端管理"
+                                                       styleClass="custom-jfx-button-raised"/>
                                         </HBox>
                                     </children>
                                 </HBox>
@@ -100,20 +110,17 @@
                         </StackPane>
                     </children>
                 </HBox>
-                <JFXTreeTableView fx:id="downUserTreeTableView">
+                <TableView fx:id="">
                     <columns>
-                        <JFXTreeTableColumn fx:id="downusername" minWidth="133" prefWidth="133" resizable="true"
-                                            text="设备编号"/>
-                        <JFXTreeTableColumn fx:id="downname" minWidth="133" resizable="true" text="设备类型"/>
-                        <JFXTreeTableColumn fx:id="status" minWidth="133" resizable="true" text="侦听端口"/>
-                        <JFXTreeTableColumn minWidth="133" resizable="true" text="设备参数管理">
-                        </JFXTreeTableColumn>
+                        <TableColumn fx:id="" prefWidth="172" resizable="true" text="设备编号"/>
+                        <TableColumn fx:id="" prefWidth="173" resizable="true" text="设备类型"/>
+                        <TableColumn fx:id="" prefWidth="173" resizable="true" text="侦听端口"/>
                     </columns>
-                </JFXTreeTableView>
+                </TableView>
             </children>
         </VBox>
         <HBox layoutY="760" layoutX="280" style="-fx-font-size: 14">
-            <JFXButton fx:id="comitFixedMeasure" buttonType="RAISED" style="-fx-background-color: green;"
+            <JFXButton fx:id="commitFixedMeasure" buttonType="RAISED" style="-fx-background-color: green;"
                        styleClass="custom-jfx-button-raised" prefHeight="30" text="确定"/>
         </HBox>
     </AnchorPane>
