--- a/src/main/resources/views/fxml/device/editDeviceAfter.fxml
+++ b/src/main/resources/views/fxml/device/editDeviceAfter.fxml
@@ -5,34 +5,51 @@
 <?import javafx.collections.FXCollections?>
 <?import com.jfoenix.controls.JFXCheckBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx"
-            prefHeight="500.0" prefWidth="300.0">
-    <VBox layoutY="20" layoutX="35">
+<?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
+<?import javafx.scene.text.Text?>
+<ScrollPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx"
+            prefHeight="500.0" prefWidth="400.0">
+    <VBox style="-fx-padding: 20 0 0 50;">
         <GridPane>
             <Label prefHeight="25.0" prefWidth="60.0" text="设备编号:" GridPane.columnIndex="0"
                    GridPane.rowIndex="1"/>
-            <Label fx:id="NoiseDeviceCode" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <TextField fx:id="NoiseDeviceCode" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="1">*</Label>
             <Label prefHeight="25.0" prefWidth="60.0" text="设备密码:" GridPane.columnIndex="0"
                    GridPane.rowIndex="2"/>
-            <TextField fx:id="DevicePassword" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-            <Label GridPane.columnIndex="2" GridPane.rowIndex="2">*</Label>
+            <PasswordField fx:id="DevicePassword" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="2">* 请输入6位密码</Label>
             <Label prefHeight="25.0" prefWidth="60.0" text="侦听端口:" GridPane.columnIndex="0"
                    GridPane.rowIndex="3"/>
-            <TextField fx:id="MeasureUserName" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-            <Label GridPane.columnIndex="2" GridPane.rowIndex="3">*</Label>
-            <Label prefHeight="30.0" prefWidth="60.0" text="功 能 区:" style="-fx-padding: 0 0 5 0" GridPane.columnIndex="0"
+            <TextField fx:id="LinkPort" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="3">* 请输入4位端口</Label>
+            <Label prefHeight="25.0" prefWidth="60.0" text="DTUSIM:" GridPane.columnIndex="0"
                    GridPane.rowIndex="4"/>
-            <ComboBox fx:id="searchComboBox" id="jfxComboBox" prefWidth="170" promptText="选择设备类型" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <TextField fx:id="DTUSIM" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="4">*</Label>
+            <Label prefHeight="30.0" prefWidth="60.0" text="功  能 区:" style="-fx-padding: 0 0 5 0" GridPane.columnIndex="0"
+                   GridPane.rowIndex="5"/>
+            <ComboBox fx:id="FunCode" prefWidth="170" promptText="选择设备类型" GridPane.columnIndex="1" GridPane.rowIndex="5">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
+                        <String fx:value="0"/>
+                        <String fx:value="1"/>
+                        <String fx:value="2"/>
+                        <String fx:value="3"/>
+                        <String fx:value="4A"/>
+                        <String fx:value="4B"/>
                     </FXCollections>
                 </items>
             </ComboBox>
             <Label prefHeight="25.0" prefWidth="60.0" text="话筒高度:" GridPane.columnIndex="0"
-                   GridPane.rowIndex="5"/>
-            <TextField fx:id="MicrophoneHeight" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-            <Label GridPane.columnIndex="2" GridPane.rowIndex="5">米</Label>
+                   GridPane.rowIndex="6"/>
+            <TextField fx:id="MicrophoneHeight" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="6">米</Label>
         </GridPane>
+        <VBox style="-fx-padding: 0 0 0 50">
+            <Text fx:id="actiontarget" style="-fx-fill: red"/>
+        </VBox>
         <Label style="-fx-padding: 10 0 0 55">提示：*为必填项</Label>
         <HBox style="-fx-padding: 15 0 0 0">
             <JFXCheckBox fx:id="IsAutoAdjust" selected="true" text="自动校时（推荐选择）"/>
@@ -70,5 +87,8 @@
         <HBox style="-fx-padding: 20 0 0 0">
             <JFXCheckBox fx:id="IsOpenVoice" selected="true" text="开启实时语音服务（需硬件相关授权）"/>
         </HBox>
+        <HBox style="-fx-padding: 20 0 0 95;-fx-font-size: 14">
+            <JFXButton fx:id="editAddFixedDevice" buttonType="RAISED" style="-fx-background-color: green;" styleClass="custom-jfx-button-raised" prefHeight="30" text="确定"/>
+        </HBox>
     </VBox>
-</AnchorPane>
+</ScrollPane>
